manifests/media-tools/transmission/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transmission
  namespace: media-tools
spec:
  serviceName: transmission
  replicas: 1
  revisionHistoryLimit: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
        name: transmission
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      automountServiceAccountToken: false
      priorityClassName: low-priority
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - "amd64"
      containers:
      - name: transmission
        image: docker.io/linuxserver/transmission:4.0.6
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
            add:
            - "CHOWN"
            - "SETGID"
            - "SETUID"
        resources:
          requests:
            cpu: 2m
            memory: 35Mi
          limits:
            # cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 9091
          name: http
          protocol: TCP
        - containerPort: 42615
          name: remotedata-tcp
          protocol: TCP
        - containerPort: 42615
          name: remotedata-udp
          protocol: UDP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
        volumeMounts:
        - name: transmission
          mountPath: /config
        - name: media-downloads
          mountPath: /downloads
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
      - name: transmission
        persistentVolumeClaim:
          claimName: nfs-transmission
      - name: media-downloads
        persistentVolumeClaim:
          claimName: nfs-media-downloads
