manifests/media-tools/transmission/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: transmission-service
  name: transmission-service
  namespace: media-tools
  annotations:
    lbipam.cilium.io/ips: 192.168.10.12
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
  - port: 42615
    protocol: TCP
    targetPort: 42615
    name: remotedata-tcp
  - port: 42615
    protocol: UDP
    targetPort: 42615
    name: remotedata-udp
  - port: 9091
    protocol: TCP
    targetPort: http
    name: web 
  selector:
    app: transmission
