manifests/media-tools/transmission/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
  namespace: media-tools
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "transmission.ucdialplans.com"
  rules:
  - backendRefs:
    - name: transmission-service
      namespace: media-tools
      kind: Service
      port: 9091
